# large_agent_mapf

./: CMakeLists.txt  README.md  package.xml  readme.md
include/large_agent_mapf/: action_dependency_graph.h  common_interfaces.h  controller.h  fake_agents.h  test_data.h
launch/: Type-4.launch  gazebo_launch.py
src/: fake_agents.cpp  lamapf_planner.cpp  my_node.cpp
srv/: PathExecution.srv
world/: empty.world  warehouse.world
